git가지고 놀다가 큰일날뻔한거 pull하지 않아도 됌